# ufc-predictions

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
src/ufcpred/: db.py  features.py  ingest.py  parse.py  predict.py  ratings.py  train.py  update.py
src/ufcpred.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_features.py  test_parse.py  test_predict.py  test_ratings.py  test_train.py  test_update.py
