[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufcpred"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "pandas",
    "numpy",
    "scikit-learn",
    "lightgbm",
    "matplotlib",
    "joblib",
    "pyarrow",
    "scrapy==2.11.1",
    "Twisted==23.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
